# queue-workers

./: .gitignore  Cargo.toml  Dockerfile.test  LICENSE  README.md  docker-compose.yml
.circleci/: config.yml
.githooks/: pre-commit
docs/: LOGGING.md  PUBLISHING.md  VERSION_UPDATER.md
scripts/: setup-git-hooks.sh  update_version.rs  update_version.sh
src/: concurrent_worker.rs  error.rs  job.rs  lib.rs  metrics.rs  queue.rs  redis_queue.rs  simple_queue.rs  worker.rs
src/queues/: queue.rs  redis_queue.rs
src/tests/: helpers.rs
src/workers/: concurrent_worker.rs  serial_worker.rs
tests/: concurrent_worker.rs  concurrent_worker_integration.rs  integration_tests.rs  metrics_tests.rs  queue.rs  redis_queue.rs  serial_worker.rs  serial_worker_integration.rs  simple_queue.rs
tests/common/: mod.rs
