[package]
name = "queue_workers"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "A Redis-backed job queue system for Rust applications"
repository = "https://github.com/yourusername/queue_workers"

[dependencies]
async-trait = "0.1.88"
chrono = { version = "0.4.40", features = ["serde"] }
redis = { version = "0.29.5", features = ["tokio-comp"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
tokio = { version = "1.44.2", features = ["full"] }
uuid = { version = "1.16.0", features = ["v4", "serde"] }
